2011-09-02  Dominique Dumont  <domi.dumont@free.fr> 1.326

    * added check warning button in list viewer and editor

2011-05-17  Dominique Dumont  <domi.dumont@free.fr> 1.325

    * TkUI.pm: disable double-click because it trigger
      editor when double clicking outside of Hlist
    * NodeEditor.pm: respect order of element when 
      completing the pane widget after warp

2011-05-17  Dominique Dumont  <domi.dumont@free.fr> 1.324

   * Depends on Config::Model 1.244
   * TkUI: added search widget (menu "Edit -> Search" or
     just hit <Ctrl-F>)
   * ListEditor: fix bug that prevented to push a null value

2011-04-11  Dominique Dumont  <domi.dumont@free.fr> 1.323

    * LeafEditor: show value help widget only when useful
    * TkUI: added help menu entry to show the config class man page.
    * AnyViewer: use Tk::Text::Pod to display on-line help
    * Paste on List items will push content of cut buffer into the list
    * ListEditor: reworked layout for better usability, added sort button
    * HashEditor: reworked layout for better usability

2011-03-04  Dominique Dumont  <domi.dumont@free.fr> 1.322

        * Changed nb of skipped tests (fix test plan issues
         when Tk cannot be run)

2011-03-01  Dominique Dumont  <domi.dumont@free.fr> 1.321

        * TkUi.pm: renamed 'check' menu to 'check for errors'. Added 'check for warnings'
        * AnyViewer: renamed warning widget to 'issue'. Display errors with red background
        * NodeEditor: added widget to edit node annotations

2011-01-11  Dominique Dumont  <domi.dumont@free.fr> 1.320

        * LeafViewer: removed 'apply fix' button. This one is reserved for 
        LeafEditor

2011-01-09  Dominique Dumont  <domi.dumont@free.fr> 1.319

        * LeafEditor: added fix button to fix warnings (if model provides a fix)
        * Wizard: clicking on next or previous does save value from wizard. 'stop' button
          will use new bail_out method from WizardHelper.
